chore: Restore encryption configuration [DHIS2-21518]